<resources>
    <string name="app_name">ToyNJoy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="navigation_button_gamestore">商店</string>
    <string name="navigation_button_home">主页</string>
    <string name="navigation_button_friends">好友</string>

    <string name="Welcome">欢迎</string>
    <string name="your_username">您的用户名</string>
    <string name="you_password">您的密码</string>
    <string name="Forget_Password">忘记密码？</string>
    <string name="Tap_Here">点击这里</string>
    <string name="Login">登录</string>
    <string name="Logout">退出登录</string>
    <string name="Sign_in">注册</string>

    <string name="userInfo">账号资料</string>
    <string name="title_portrait">头像</string>
    <string name="title_nickname">昵称</string>
    <string name="title_gender">性别</string>
    <string name="title_birthday">出生年月</string>
    <string name="title_signature">个性签名</string>

    <string name="orderByName">根据名称</string>
    <string name="orderByCreateTime">根据发布时间</string>
    <string name="orderByPrice">根据价格</string>
    <string name="orderBySales">根据销量</string>
    <string name="orderByBrowse">根据热度</string>

    <string name="game_brief_introduction">游戏简介</string>
    <string name="buy">立即购买</string>
    <string name="newGame">最新上架</string>
    <string name="browseGame">最受关注</string>
    <string name="purchasesGame">向您推荐</string>

    <string name="register_now">立即注册</string>
    <string name="register_title">加入ToyNJoy</string>
    <string name="confirm_password">确认密码</string>
    <string name="register_email">您的邮箱</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>

    <string name="alipay_title">收银台</string>
    <string name="paid_in_amount">实付金额</string>
    <string name="payment_method">选择付款方式</string>
    <string name="RMB">￥</string>

    <string name="demo_info_text">Warning: \n\nFor demonstration purpose, the assembling and signing of the request parameters are done on the client side.\nHowever, in practice, both assembling and signing MUST BE carried out on the server side.</string>
    <string name="pay_with_alipay">Pay with Alipay</string>
    <string name="pay_with_alipay_hk">Pay with AlipayHK</string>
    <string name="auth_with_alipay">Authenticate with Alipay</string>
    <string name="web_to_native">Call Alipay from Web Content</string>
    <string name="check_sdk_version">Alipay SDK Version</string>
    <string name="pay_success">Payment success:</string>
    <string name="auth_failed">Authentication failed:</string>
    <string name="error_missing_appid_rsa_private">Error: Missing \"APPID\" or \"RSA_PRIVATE\" in PayDemoActivity.</string>
    <string name="error_missing_hk_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_HK.</string>
    <string name="pay_result">Payment result:</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">Error: Missing \"PARTNER\", \"APP_ID\", \"RSA_PRIVATE\", or \"TARGET_ID\" in PayDemoActivity.</string>
    <string name="confirm">Confirm</string>
    <string name="pay_failed">Payment failed:</string>
    <string name="auth_success">Authentication success:</string>
    <string name="alipay_sdk_version_is">"Alipay SDK version: "</string>
    <string name="error_missing_h5_pay_url">Missing URL to load. Please configure in PayDemoActivity.h5Pay()</string>
    <string name="error">Error</string>
    <string name="pay_cross_border">Cross-border Pay with Alipay</string>
    <string name="error_missing_global_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_Global.</string>
    <string name="payment_inst_hk">Payer: HK</string>
    <string name="payment_inst_cn">Payer: CN</string>

    <string name="WishList">愿望单</string>
    <string name="Library">库存</string>
    <string name="clickLogin">点击头像登录</string>

</resources>