<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/hng"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout style="@style/login_text_box">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/System"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_7"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <EditText
                    android:id="@+id/username"
                    style="@style/login_edit"
                    android:hint="@string/your_username" />

                <View style="@style/editLine" />

                <EditText
                    android:id="@+id/password"
                    style="@style/login_edit"
                    android:hint="@string/you_password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                style="@style/login_text_box"
                android:orientation="horizontal">

                <TextView
                    style="@style/login_message_text"
                    android:text="@string/Forget_Password"
                    android:textColor="@color/grey" />

                <TextView
                    style="@style/login_message_text"
                    android:text="@string/Tap_Here"
                    android:textColor="@color/System_weaken" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login"
                    style="@style/login_button"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/Login" />

                <Button
                    android:id="@+id/signin"
                    style="@style/login_button"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="40dp"
                    android:text="@string/Sign_in" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>