<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/hng"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout style="@style/login_text_box">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/register_title"
                    android:textColor="@color/System"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_7"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <EditText
                    android:id="@+id/register_username"
                    style="@style/login_edit"
                    android:hint="@string/your_username" />

                <View style="@style/editLine" />

                <EditText
                    android:id="@+id/register_password"
                    style="@style/login_edit"
                    android:hint="@string/you_password"
                    android:inputType="textPassword" />

                <View style="@style/editLine" />

                <EditText
                    android:id="@+id/register_confirm_password"
                    style="@style/login_edit"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

                <View style="@style/editLine" />

                <EditText
                    android:id="@+id/register_email"
                    style="@style/login_edit"
                    android:hint="@string/register_email" />

                <View style="@style/editLine" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_verification_code"
                        style="@style/login_edit"
                        android:layout_weight="1"
                        android:hint="@string/verification_code" />

                    <Button
                        android:id="@+id/get_verification_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="35dp"
                        android:background="@drawable/button_style"
                        android:text="@string/get_verification_code"
                        android:minHeight="35dp"
                        android:textColor="@color/white"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/login_text_box"
                android:orientation="horizontal">

            </LinearLayout>

            <Button
                android:id="@+id/register_now"
                style="@style/register_button"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/register_now"
                android:textColor="@color/white"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>