<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserInfo"
    android:background="@color/grey_background"
    android:orientation="vertical">

    <LinearLayout
        style="@style/top"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/System"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/toLastPage"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_lastpage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userInfo"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <!-- 头像 -->
        <RelativeLayout
            android:id="@+id/info_portrait_item"
            style="@style/infoItem">
            <TextView
                style="@style/forContent"
                android:layout_centerVertical="true"
                android:text="@string/title_portrait"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/info_portrait"
                style="@style/portraitImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_toLeftOf="@+id/info_more_ic_1"
                app:shapeAppearanceOverlay="@style/circleImageStyle"
                app:srcCompat="@drawable/ic_mine_unselected"
                app:strokeColor="@color/System_emphasize"
                app:strokeWidth="2dp"/>

            <ImageView
                android:id="@+id/info_more_ic_1"
                style="@style/infoMoreIC"/>
        </RelativeLayout>

        <View
            style="@style/line_InWidthBackground"/>

        <!-- 昵称 -->
        <RelativeLayout
            android:id="@+id/info_nickname_item"
            style="@style/infoItem">
            <TextView
                style="@style/forContent"
                android:layout_centerVertical="true"
                android:text="@string/title_nickname"/>

            <TextView
                android:id="@+id/info_nickname"
                style="@style/infoValue"
                android:layout_toLeftOf="@+id/info_more_ic_2"/>

            <ImageView
                android:id="@+id/info_more_ic_2"
                style="@style/infoMoreIC"/>
        </RelativeLayout>

        <View
            style="@style/line_InWidthBackground"/>

        <!-- 性别 -->
        <RelativeLayout
            android:id="@+id/info_gender_item"
            style="@style/infoItem">
            <TextView
                style="@style/forContent"
                android:layout_centerVertical="true"
                android:text="@string/title_gender"/>

            <TextView
                android:id="@+id/info_gender"
                style="@style/infoValue"
                android:layout_toLeftOf="@+id/info_more_ic_3"/>

            <ImageView
                android:id="@+id/info_more_ic_3"
                style="@style/infoMoreIC"/>
        </RelativeLayout>

        <View
            style="@style/line_InWidthBackground"/>

        <!-- 出生年月 -->
        <RelativeLayout
            android:id="@+id/info_birthday_item"
            style="@style/infoItem">
            <TextView
                style="@style/forContent"
                android:layout_centerVertical="true"
                android:text="@string/title_birthday"/>

            <TextView
                android:id="@+id/info_birthday"
                style="@style/infoValue"
                android:layout_toLeftOf="@+id/info_more_ic_4"/>

            <ImageView
                android:id="@+id/info_more_ic_4"
                style="@style/infoMoreIC"/>
        </RelativeLayout>

        <View
            style="@style/line_InWidthBackground"/>

        <!-- 个性签名 -->
        <RelativeLayout
            android:id="@+id/info_signature_item"
            style="@style/infoItem">
            <TextView
                style="@style/forContent"
                android:layout_centerVertical="true"
                android:text="@string/title_signature"/>

            <TextView
                android:id="@+id/info_signature"
                style="@style/infoValue"
                android:layout_toLeftOf="@+id/info_more_ic_5"/>

            <ImageView
                android:id="@+id/info_more_ic_5"
                style="@style/infoMoreIC"/>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:background="@color/white"
        android:text="@string/Logout"
        android:textSize="16dp"
        tools:ignore="InvalidId" />

</LinearLayout>