<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Alipay"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <RelativeLayout
        style="@style/top"
        android:id="@+id/alipay_Title"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/toLastPage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_alipay_lastpage"/>

        <TextView
            android:id="@+id/Title_InProjectInfo"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/alipay_title"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/alipay_Title"
        android:layout_marginTop="60dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paid_in_amount"
            android:gravity="center"
            android:textColor="#666"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RMB"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/alipay_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00.00"
                android:textColor="@color/black"
                android:textSize="35sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:paddingLeft="15dp"
            android:layout_marginTop="60dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/alipay_option"/>

    </LinearLayout>

    <Button
        android:id="@+id/alipay_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/alipay_button_style"
        android:textColor="@color/white" />

</RelativeLayout>